--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
   },
   "author": "Douglas von Kohorn",
   "license": "MIT",
+  "dependencies": {
+    "immutable": "^3.8.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-preset-env": "^1.1.8",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.22.0",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
@@ -31,7 +33,7 @@
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.6",
     "web3": "^0.18.2",
-    "webpack": "^2.2.1",
+    "webpack": "^2.4.1",
     "webpack-dev-server": "^2.3.0"
   }
 }
