--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "author": "Douglas von Kohorn",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "immutable": "^3.8.1",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
-    "babel-eslint": "^6.1.2",
     "babel-core": "^6.24.1",
+    "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
@@ -28,10 +30,12 @@
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^2.0.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.6",
+    "url-loader": "^0.5.8",
     "web3": "^0.18.2",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.3.0"
