--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "immutable": "^3.8.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
