--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "redux": "^3.6.0"
   },
   "devDependencies": {
