--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "scripts": {
     "lint": "eslint ./",
     "build": "webpack",
-    "dev": "webpack-dev-server"
+    "dev": "webpack-dev-server --content-base build/"
   },
   "author": "Douglas von Kohorn",
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "immutable": "^3.8.1",
+    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.4",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -27,10 +30,14 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.0",
+    "eslint-config-airbnb": "^14.1.0",
     "eslint-config-standard": "^6.0.0",
     "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-mocha": "^4.8.0",
     "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.0.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
@@ -40,6 +47,6 @@
     "url-loader": "^0.5.8",
     "web3": "^0.18.2",
     "webpack": "^2.4.1",
-    "webpack-dev-server": "^2.3.0"
+    "webpack-dev-server": "^2.4.4"
   }
 }
