--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Alex Willis",
   "license": "MIT",
   "dependencies": {
+    "@types/bootstrap": "^3.3.33",
+    "@types/react": "^15.0.24",
+    "@types/react-dom": "^15.5.0",
+    "@types/react-redux": "^4.4.40",
+    "@types/redux-logger": "^3.0.0",
     "bootstrap": "^3.3.7",
-    "immutable": "^3.8.1",
-    "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-bootstrap": "^0.30.9",
     "react-dom": "^15.5.4",
@@ -22,6 +25,7 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "^3.1.3",
     "babel-core": "^6.24.1",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.4.1",
@@ -42,8 +46,10 @@
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.13.1",
     "truffle-contract": "^1.1.6",
+    "typescript": "^2.3.2",
     "url-loader": "^0.5.8",
     "web3": "^0.18.2",
     "webpack": "^2.4.1",
