--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/bootstrap": "^3.3.33",
     "@types/react": "^15.0.24",
+    "@types/react-bootstrap": "0.0.49",
     "@types/react-dom": "^15.5.0",
     "@types/react-redux": "^4.4.40",
     "@types/redux-logger": "^3.0.0",
