--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "demo project using etherium",
   "scripts": {
     "build": "webpack",
-    "dev": "webpack-dev-server --content-base build/"
+    "dev": "webpack-dev-server --content-base build/",
+    "publish": "git subtree push --prefix build origin gh-pages"
   },
   "author": "Alex Willis",
   "license": "MIT",
